@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha1
+	- Fixed issue where Remote songs would never be removed from
+		the democratic playlist
+	- Fixed issue where user preferences weren't set correctly
+		on stream (Thx lorijho)
 	- Added caching of user preferences to avoid a SQL query on load
 		(Thx Protagonist)
 	- Fixed home menu not always displaying the entire contents
